--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
     "@orbs-network/ton-access": "^2.3.3",
     "@ton/core": "^0.59.0",
     "@ton/crypto": "^3.3.0",
+    "@ton/sandbox": "^0.22.0",
+    "@ton/test-utils": "^0.4.2",
     "@ton/ton": "^15.1.0",
-    "punycode": "^2.3.1"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "punycode": "^2.3.1",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/node": "^22.9.0"
